--- a/hoivien.css
+++ b/hoivien.css
@@ -1,8 +1,170 @@
-body {
-    max-width: 1519px; 
-    overflow-x: hidden;
+body{
+    font-family: 'Montserrat', sans-serif;
+    background-color: #fdfcf0;
+}  
+.bar{
+    background-color: #efebdb;    
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
 }
-.menu{
+.header {
+    width: 100%;
+}
+
+.header_inner {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content:space-around; 
+}
+.logo-img {
+    width: 50px;
+    transform: scale(5);
+    margin-top: -1.9rem;
+}
+.logo_img {
+    /* margin-left: 200px; */
+}
+.advert {
+    max-width: 70%;
+    margin: 0 auto;
+}
+
+.menu {
+    /* margin-left: -6rem; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+}
+.menu_item {
+    text-decoration: none;
+    display: block;
+    padding: 1rem;
+    margin-top: 2rem;
+    cursor: pointer;
+    /*  transform: translateX(-200px); */
+}
+.menu_link{
+    color: #000;
+    font-size: 2rem;  
+    text-transform: uppercase ;  
+    text-decoration: none;
+}
+.menu_link:hover  {
+    text-decoration: none;
+    color: darkblue;
+    transition: 0.1s;
+}
+.movies {
+    position: relative;
+}
+.movies_1 {
+    display: none;
+}
+.movies:hover .movies_1{
+    display: block; 
+}
+.menu_child {
+    position: absolute;
+    top: 100%;
+    left: -200px;
+    width: 1200px;
+    background-color: #efebdb;
+    display: flex;
+    z-index: 10;
+}
+.menu_child_list-1{
+    width: 25%;
+}
+.menu_child_item {
+    color: black;
+    list-style: none;
+    font-size: 1.6rem;
+    padding: 0.5rem;
+    cursor: pointer;
+    margin: 5px;
+}   
+.menu_child_item:hover {
+    color: rgb(166, 0, 255);
+    scale: 1.1;
+    transition: 0.1s;   
+    text-decoration: none;
+}
+.account-item:hover {
+    text-decoration: none;
+    color: rgb(166, 0, 255);
+}
+.more {
+    position: relative;
+}
+.menu_child-2 {
+    position: absolute;
+    top: 100%;
+    background-color: #efebdb;
+    z-index: 10;
+}
+.menu_child_list-2 {
+    display: none;
+    padding: 5px;
+}
+.more:hover .menu_child_list-2 {
+    display: block;
+}
+.movie {
+    background-color: antiquewhite;
+    margin-bottom: 2rem;
+    max-width: 100%;
+    padding-top: 1rem;
+    margin-top: -10px;
+}
+.movie-bar{
+    max-width: 900px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: -15px;
+    padding: 5px;
+}  
+.movie-child{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}  
+.movie-item{
+    text-transform: uppercase;
+    cursor: pointer;
+    font-size: 16px;
+}
+.account {
+    margin-top: 3rem;
+    margin-right: 4rem;
+    position: relative;
+}
+.icon{
+    margin-top: -10px;
+    font-size: 20px;
+    color: #000;
+}
+.account-type {
+    position: absolute;
+    display: none;
+    width: 250px;
+    background-color: #efebdb;
+    left: -50px;
+}
+.account-child {
+    list-style: none;
+}
+.account-item{
+    text-decoration: none;
+    color: black;
+} 
+.account:hover .account-type{
+    display: block;
+}
+
+/* .menu{
     width: 100%;
     height: 120px;
     background-color: #efebdb;
@@ -58,7 +220,7 @@ body {
     padding: 20px;
     font-weight: bold;
     color: #111;
-}
+} */
 .all{
     width: 100%;
     height: auto;
@@ -68,10 +230,15 @@ body {
     width: 80%;
     height: 100px;
     background-color: rgb(227, 221, 227);
-    text-align: center;
-    padding-top: 70px;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.pra p {
+
+}
+
 .pra a{
     text-decoration: none;
     color: red;
@@ -80,7 +247,7 @@ body {
     width: 80%;
     height: 1000px;
     margin: 0 auto;
-    padding-top: 60px;
+    padding-top: 20px;
 }
 .bang table{
     width: 90%;
